# ThemeSwitcher

./: CMakeLists.txt  README.md  makefile
gtest/: CMakeLists.txt  gtests.cpp
lib/: _cursesWinConsts.hpp  _progStateConsts.hpp  _winStringConsts.hpp  cursesFunctions.hpp  cursesWindow.hpp  fileOperations.hpp  log.hpp  ncursesTextEditor.hpp  programStates.hpp  testingInterface.hpp  typeConversions.hpp
src/: CMakeLists.txt  cursesFunctions.cpp  cursesWindow.cpp  fileOperations.cpp  log.cpp  main.cpp  ncursesTextEditor.cpp  programStates.cpp  testingInterface.cpp  typeConversions.cpp
